tests/sem/error/return_multibranch.c
int main() {
    if (1) {
        return "114";
    }
    return 114;
}

void mine() {
    int a[13];
    if (893) {
        while (893) {
            return 514;
        }
        return main();
    } else {
    }
    return a;
}